# voice_to_notes_bot

./: .env  .env.example  .gitignore  Dockerfile  README.md  collect_context.py  docker-compose.yml  init_builder.py  pyproject.toml  test_llm.py  test_notion.py
data/: .gitkeep
docker/: Dockerfile.worker
src/: __init__.py  main.py
src/bot/: lexicon.py  main.py
src/bot/handlers/: commands.py  voice.py
src/bot/middlewares/: taskiq.py  user_check.py
src/core/: config.py  db.py
src/db/: database.py  models.py
src/services/: audio.py  notion.py  openai_llm.py  whisper.py
src/tasks/: broker.py  tasks.py
tests/: test_bot_main.py
tests/test_core/: test_db.py
tests/test_handlers/: test_commands.py  test_unit.py
tests/test_services/: test_notion.py  test_whisper.py
tests/test_tasks/: __init__.py  test_broker.py  test_tasks.py
