[tool.poetry]
name = "voice-to-notes-bot"
version = "0.1.0"
description = "Telegram bot for voice to notion notes pipeline"
authors = ["Senior Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13.3"
aiogram = "^3.0.0"
taskiq = {extras = ["reload"], version = "^0.12.1"}
taskiq-redis = "^0.5.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.31.0"
pydantic-settings = "^2.0.0"
httpx = "^0.27.0"
notion-client = "^2.2.0"
alembic = "^1.13.0"
openai = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"